syntax = "proto3";

package frango;

message Empty {}

message PingResp {
    int32 id = 1;
}

message RRaftMessage {
    bytes bytes = 1;
}

service FrangoNode {
    rpc Ping(Empty) returns (PingResp);
    rpc RRaft(RRaftMessage) returns (Empty);
}